
2006-03-07  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Renamed TS := function addString to appenString and added prependString

2006-03-06  Michael Stucki  <michael@typo3.org>

	* Changed file icons for recently added advanced-BE-search feature
	* Changes to indexed search, see local ChangeLog for details

2006-03-06  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed some broken media relations
	* Fixed bug #2713: change hardcoded "typo3/" to TYPO3_mainDir in sysext/cms/tslib/index_ts.php
	* Fixed bug #1635: Add page TSconfig via user TSconfig

2006-03-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* !!! Remove from core some remaining elements used only by Direct Mail extension and already moved to Direct Mail 2.0:
		- remove file t3lib/gfx/i/dmail_list.gif
		- remove file t3lib/gfx/i/modules_dmail.gif
		- remove file t3lib/gfx/i/modules_dmail__h.gif
		- remove file t3lib/class.t3lib_dmailer.php
		- remove methods find_MIDfromReturnPath and find_XTypo3MID from t3lib/class.t3lib_readmail.php
		- remove columns 'module_sys_dmail_html' (fe_users) and 'module_sys_dmail_category' (fe_users and tt_content) from typo3/sysext/cms/ext_tables.sql
		- remove item 'dmail' on column 'module' of table 'pages' in typo3/sysext/cms/ext_tables.php

2006-03-05  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Replace isset with strlen in fix of bugtracker issue 1736.
	* htmlArea RTE: Add $RTEWrapStyle variable to frontend plugin class.tx_rtehtmlarea_pi2.php (bugtracker issue 2760).
	* Use new ts parsing := in cumulative sets of configuration defaults.

2006-03-04  Michael Stucki  <michael@typo3.org>

	* Fixed bug #1475: Added stdWrap properties for RECORDS cObject

2006-03-04  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Changed $TYPO3_CONF_VARS['SYS']['domainCookie'] to take a regular expressions allowing for multiple domains with sub-domains.

2006-03-03  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
